# ssw_lab_5sem

./: .gitignore  Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Variable.h  lab_01.cpp  lab_01.h  main.cpp
.github/: stale.yml
Kursovik/src/: GenCode.cpp  Lexem.h  Lexer.cpp  Syntax.cpp  Tree.cpp  Variable.h  compiller.cpp  compiller.h  main.cpp
lab_01/: test.p
lab_01/src/: Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Syntax.cpp  Syntax.h  Tree.h  Treecpp.cpp  Variable.cpp  Variable.h  lab_01.cpp  lab_01.h  lab_02.cpp  lab_02.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
lab_02/: test.p
lab_02/src/: Lexem.cpp  Lexem.h  Lexer.cpp  Syntax.cpp  Syntax.h  Test.p  Tree.cpp  main.cpp
lab_03/: CMakeLists.txt  test.p
lab_03/src/: Lexem.h  Lexer.cpp  Syntax.cpp  Syntax.h  Variable.h  lab_02.cpp  lab_03.h  main.cpp
lab_04/: CMakeLists.txt  test.p
lab_04/src/: GenCode.cpp  GenCode.h  Lexem.h  Lexer.cpp  Syntax.cpp  Syntax.h  lab_04.cpp  lab_04.h  main.cpp
seminar/Praktik/src/: Praktik.s
